- Show when registers values are modified by last opcode execution
- Views 5 and 6 use a different memptr ("memptx")
- Show when memory is modified by last opcode execution on views 5 and 6
- Direct key (t) to evaluate expressions
- Added setting to stop on PC+2 when step over RST 8, useful when debugging esxdos calls
- Added user variables VAR0, VAR1, ... VAR9
- Added video frames counter

Improved Snapshots in RAM:
- Browse visually all the stored snapshots in RAM, like on a "Time Machine"
- Allow to save snapshots in RAM; you could do it before automatically at fixed intervals, now you can save it whenever you want

Improved ZX Vision:
- Added new Top Menu (not enabled by default)
- Reordered settings & new menu: check settings -> Emulated Display, General, Main Window, ZX Vision, TV
- Added shortcuts helper action to create icon to trigger recorded keys
- Some settings dialogs can reset value to defaults
- Restored maximized windows on startup, will be restored to the maximum size available

Improved ZX Desktop:
- Allow to set small values for ZX Desktop width size
- Add setting to disallow enabling ZX Desktop
- Allow to change background color for icons, lower and upper buttons
- Added setting to add a stroke on icons

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improved decimal precision of Basic Variables window values
Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix

* Fixes:

Fixed emulation of Magnum Light Phaser
Fixed reading port BFFD on Spectrum +2A/+3
Fixed emulation of DD/FD+EB opcode: EX DE,HL instead of EX DE,IX/IY
Fixed timing of inexistent DD/FD opcodes
Fixed disassemble of undocumented opcodes dd/fd + cb + res/set (ix+d) where the result is also stored on a register
Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name