@@ -39,6 +39,7 @@ Mejorado Debug CPU:
 - Agregada opción para detenerse en PC+2 al hacer step over en RST 8, útil al debugar llamadas de esxdos
 - Agregadas variables de usuario VAR0, VAR1, ... VAR9
 - Agregado contador de frames de video
+- Reasignar tecla de opción 'x' ("cambiar modo de vista") a 'y' ("cambiar disposición")
 
 Mejorado Snapshots en RAM:
 - Navegar de manera visual por todos los snapshots en RAM, como en una "Máquina del Tiempo"
